Fix spacings in row for developers

--- a/blocks/developers/developers.css
+++ b/blocks/developers/developers.css
@@ -1,5 +1,10 @@
 @import url('/blocks/image/image.css');
 
+@media (min-width: 1025px) {
+    .section.developers-container .developers-left {
+        padding-left: 0;
+    }
+}
 
 @media (max-width: 1024px) {
     .section.developers-container {
